<resources>
    <string name="app_name">Ecommerce</string>
    <string name="login">Login</string>
    <string name="email_phone">Email / Phone</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="forgot_toast">Enter the email adress you used to register</string>
    <string name="enter_pass">Enter the email adress you used to register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fa_icon_piechart">&#xf200;</string>

</resources>
