<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="katar.example.elgaml.ecommerce.auth.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/login"/>
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/email_phone_login"
        android:layout_below="@+id/toolbar"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        />

    <EditText
        android:id="@+id/email_phone_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/email_password_background"
        android:hint="@string/email_phone"
        android:paddingLeft="20dp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignStart="@+id/email_phone_login"
        android:layout_below="@+id/email_phone_login"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        />
    <EditText
        android:id="@+id/passowrd_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email_phone_login"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:paddingLeft="20dp"
        android:background="@drawable/email_password_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_wrong_toast"
        android:layout_below="@+id/passowrd_login"
        android:layout_marginStart="20dp"
        android:text="email toast"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/hide_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_below="@+id/email_phone_login"
        android:layout_marginTop="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="45dp"
        />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@+id/passowrd_login"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textColor="#fff"

        android:background="@drawable/sign_in_button"
        />

    <TextView
        android:id="@+id/not_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="Not Register yet ?"/>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/not_register"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="20dp"
        android:text="Sign up"/>

</RelativeLayout>